# jsonld-scraper-tutorial

./: Pipfile  README.md  config.py  main.py  pyproject.toml  requirements.txt
.github/: dependabot.yml
extruct_tutorial/: __init__.py
extruct_tutorial/tests/: test_scrape.py
