[tool.poetry]
name = "extruct_tutorial"
version = "0.1.0"
description = "Supercharge your scraper to extract quality page metadata by parsing JSON-LD data via the Python extruct library."
authors = ["Todd Birchard <toddbirchard@gmail.com>"]
maintainers = ["Todd Birchard <toddbirchard@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://hackersandslackers.com/scrape-metadata-json-ld/"
repository = "https://github.com/hackersandslackers/jsonld-scraper-tutorial/"
documentation = "https://hackersandslackers.com/scrape-metadata-json-ld/"
keywords = [
    "Scraper",
    "Scraping",
    "JSON-LD",
    "Data",
    "Tutorial"
]

[tool.poetry.dependencies]
python = "^3.8"
requests = "*"
extruct = "*"

[tool.poetry.dev-dependencies]
pytest = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
run = "main:scrape"

[tool.poetry.urls]
issues = "https://github.com/hackersandslackers/jsonld-scraper-tutorial/issues"
